<resources>
    <string name="app_name">Diagnostic Reading App</string>
    <string name="initial_image_from_camera">Initial image from camera</string>
    <string name="take_photo">Take Photo</string>
    <string name="takeAPicture">Center your samples and\n take a picture.</string>
    <string name="analyzePicture">Analyze your samples.</string>
    <string name="view_area_for_analysis">View area for analysis.</string>
    <string name="positive_controls">Positive Controls</string>
    <string name="negative_controls">Negative Controls</string>
    <string name="patient_samples">Patient Samples</string>
    <string name="Submit">Submit</string>
    <string name="EraseAll">Clear</string>
    <string name="privacy_policy"><a href="https://github.com/scotttmoen/Diagnostic_Reading_App/blob/master/Privacy_Policy.md">Our Privacy Policy</a></string>
    <string name="constraint_for_analysis_image">constraint for analysis image</string>
</resources>