<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <TextView
        android:id="@+id/intro_text2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/analyzePicture"
        android:textColor="@color/design_default_color_primary"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/image_constraint"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginHorizontal= "100dp"
        android:contentDescription="@string/constraint_for_analysis_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_text2">

        <ImageView
            android:id="@+id/imageViewAnalyze"
            android:background="@color/design_default_color_primary"
            android:contentDescription="@string/view_area_for_analysis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/image_constraint"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rGroup"
            android:orientation="vertical">
            <RadioButton android:id="@+id/positiveControls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#265828"
                android:textSize="20sp"
                android:text="@string/positive_controls"
                android:onClick="whichRadio"/>
            <RadioButton android:id="@+id/negativeControls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:text="@string/negative_controls"
                android:onClick="whichRadio"/>
            <RadioButton android:id="@+id/patientSamples"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#6200EE"
                android:textSize="20sp"
                android:text="@string/patient_samples"
                android:onClick="whichRadio"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/submitAnalyze"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:text="@string/Submit"/>

            <Button
                android:id="@+id/eraseValues"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/red"
                android:text="@string/EraseAll"
                android:textColor="@color/black"/>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>